fix performanec